# payhere-backend

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
common/: models.py
config/: settings.py  urls.py
households/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
households/migrations/: 0001_initial.py
users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
